--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for tansa-prod on 2025-04-03T12:12:17+13:00
+# fly.toml app configuration file generated for tansa-web on 2026-01-05T10:22:05+13:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'tansa-prod'
+app = 'tansa-web'
 primary_region = 'syd'
 swap_size_mb = 512
 
@@ -12,11 +12,13 @@ swap_size_mb = 512
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'suspend'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
 
 [[vm]]
   size = 'shared-cpu-1x'
-  memory = '256mb'
+  memory = '512mb'
+  cpus = 1
+  memory_mb = 512
