--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "stripe": "stripe listen --forward-to localhost:3000/api/webhook"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "latest",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/plugin-import-export": "^3.64.0",
-    "@payloadcms/storage-s3": "^3.37.0",
+    "@payloadcms/db-postgres": "^3.49.1",
+    "@payloadcms/next": "^3.49.1",
+    "@payloadcms/payload-cloud": "^3.49.1",
+    "@payloadcms/plugin-import-export": "^3.49.1",
+    "@payloadcms/storage-s3": "^3.49.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.2",
@@ -36,7 +36,7 @@
     "lucide": "^0.486.0",
     "lucide-react": "^0.486.0",
     "next": "^15.4.6",
-    "payload": "latest",
+    "payload": "^3.49.1",
     "postcss": "^8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
