[email hook] implement baseline resend hook

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ S3_ENDPOINT=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+
+# Resend (referral code email). If unset, referral code is not emailed.
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=
