--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss": "^8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "resend": "^4.0.0",
     "sharp": "0.32.6",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.0",
