[exec] implement exec dashboard page for oweek

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 # Resend (referral code email). If unset, referral code is not emailed.
 RESEND_API_KEY=
 RESEND_FROM_EMAIL=
+
+# Exec O-Week dashboard (URL-only, not in nav). Shared password for /exec/dashboard.
+EXEC_DASHBOARD_PASSWORD=
